--- a/ios/Treesnap/Base.lproj/LaunchScreen.xib
+++ b/ios/Treesnap/Base.lproj/LaunchScreen.xib
@@ -21,8 +21,12 @@
                     <color key="textColor" red="0.33371093750000003" green="0.33371093750000003" blue="0.33371093750000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ts-logo-1024-full" translatesAutoresizingMaskIntoConstraints="NO" id="5t9-sQ-He5">
-                    <rect key="frame" x="48" y="48" width="384" height="384"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TreesnapFullLogo_x1" translatesAutoresizingMaskIntoConstraints="NO" id="VBU-ZL-F6I">
+                    <rect key="frame" x="112" y="79.5" width="256" height="321"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="321" id="YhH-4G-mvg"/>
+                        <constraint firstAttribute="width" constant="256" id="oxY-YZ-6ln"/>
+                    </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -30,9 +34,9 @@
                 <constraint firstItem="8ie-xW-0ye" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="IOI-Wu-dmc"/>
                 <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
                 <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
+                <constraint firstItem="VBU-ZL-F6I" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Py1-Pg-cPn"/>
                 <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
-                <constraint firstItem="5t9-sQ-He5" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="leH-HO-8js"/>
-                <constraint firstItem="5t9-sQ-He5" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="nIk-HU-0Cc"/>
+                <constraint firstItem="VBU-ZL-F6I" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="eKA-FF-gQZ"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -40,6 +44,6 @@
         </view>
     </objects>
     <resources>
-        <image name="ts-logo-1024-full" width="384" height="384"/>
+        <image name="TreesnapFullLogo_x1" width="256" height="321"/>
     </resources>
 </document>
