--- a/ios/Treesnap/Base.lproj/LaunchScreen.xib
+++ b/ios/Treesnap/Base.lproj/LaunchScreen.xib
@@ -21,7 +21,7 @@
                     <color key="textColor" red="0.33371093750000003" green="0.33371093750000003" blue="0.33371093750000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TreesnapFullLogo_x1" translatesAutoresizingMaskIntoConstraints="NO" id="VBU-ZL-F6I">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TreeSnapFullLogo_x1" translatesAutoresizingMaskIntoConstraints="NO" id="VBU-ZL-F6I">
                     <rect key="frame" x="112" y="79.5" width="256" height="321"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="321" id="YhH-4G-mvg"/>
@@ -44,6 +44,6 @@
         </view>
     </objects>
     <resources>
-        <image name="TreesnapFullLogo_x1" width="256" height="321"/>
+        <image name="TreeSnapFullLogo_x1" width="256" height="321"/>
     </resources>
 </document>
