--- a/ios/Treesnap/Base.lproj/LaunchScreen.xib
+++ b/ios/Treesnap/Base.lproj/LaunchScreen.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,7 +21,7 @@
                     <color key="textColor" red="0.33371093750000003" green="0.33371093750000003" blue="0.33371093750000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TreeSnapFullLogo_x1" translatesAutoresizingMaskIntoConstraints="NO" id="VBU-ZL-F6I">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TreesnapFullLogo_x1" translatesAutoresizingMaskIntoConstraints="NO" id="VBU-ZL-F6I">
                     <rect key="frame" x="112" y="79.5" width="256" height="321"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="321" id="YhH-4G-mvg"/>
@@ -44,6 +44,6 @@
         </view>
     </objects>
     <resources>
-        <image name="TreeSnapFullLogo_x1" width="256" height="321"/>
+        <image name="TreesnapFullLogo_x1" width="360" height="452"/>
     </resources>
 </document>
